--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "commitlint": "echo $MSG | commitlint",
     "commit": "commit"
   },
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/weahead/commitlint-config.git"
