--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "@commitlint/cli": "8.1.0",
     "@commitlint/config-conventional": "8.1.0",
-    "@commitlint/prompt-cli": "8.1.0"
+    "@commitlint/prompt-cli": "8.1.0",
+    "@weahead/prettier-config": "0.1.3",
+    "prettier": "1.18.2"
   },
   "peerDependencies": {
     "@commitlint/cli": ">=8",
