--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "commitlint": "echo $MSG | commitlint",
-    "commit": "commit"
+    "commit": "commit",
+    "lint": "eslint --fix '**/*.js' '**/*.json'"
   },
   "files": [
     "index.js"
@@ -27,6 +28,8 @@
     "@commitlint/prompt-cli": "8.1.0",
     "@weahead/lint-staged-config": "0.2.1",
     "@weahead/prettier-config": "0.1.3",
+    "eslint": "6.1.0",
+    "eslint-plugin-json": "1.4.0",
     "lint-staged": "9.2.1",
     "prettier": "1.18.2"
   },
