--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "env": {
-    "node": true
-  },
-  "extends": "eslint:recommended",
-  "plugins": ["json"]
+  "extends": ["@weahead/eslint-config-tool"]
 }
