--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "We aheads configuration for commitlint.",
   "main": "index.js",
   "scripts": {
-    "commitlint": "echo $MSG | commitlint",
-    "commit": "commit",
     "lint": "eslint --fix '**/*.js' '**/*.json'"
   },
   "files": [
@@ -25,15 +23,17 @@
   "devDependencies": {
     "@commitlint/cli": "8.1.0",
     "@commitlint/config-conventional": "8.1.0",
-    "@commitlint/prompt-cli": "8.1.0",
     "@weahead/eslint-config-tool": "0.1.1",
     "@weahead/husky-config": "0.3.2",
-    "@weahead/lint-staged-config": "0.2.1",
+    "@weahead/lint-staged-config": "0.3.1",
     "@weahead/prettier-config": "0.1.3",
-    "eslint": "6.1.0",
+    "commitizen": "4.0.3",
+    "cz-conventional-changelog": "3.0.2",
+    "eslint": "6.2.2",
     "eslint-plugin-json": "1.4.0",
-    "husky": "3.0.1",
-    "lint-staged": "9.2.1",
+    "husky": "3.0.4",
+    "lint-staged": "9.2.5",
+    "markdownlint-cli": "0.18.0",
     "package-change-checker": "1.2.4",
     "prettier": "1.18.2"
   },
@@ -41,5 +41,10 @@
     "@commitlint/cli": ">=8",
     "@commitlint/config-conventional": ">=8",
     "@commitlint/prompt-cli": ">=8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
