--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "commitlint": "echo $MSG | commitlint",
     "commit": "commit",
-    "lint": "eslint --fix '**/*.js' '**/*.json'"
+    "lint": "eslint --fix '**/*.js' '**/*.json'",
+    "postinstall": "./scripts/postinstall.sh"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "scripts/*"
   ],
   "repository": {
     "type": "git",
