--- a/package.json
+++ b/package.json
@@ -25,19 +25,7 @@
   "homepage": "https://github.com/weahead/commitlint-config#readme",
   "dependencies": {},
   "devDependencies": {
-    "@commitlint/cli": "8.1.0",
-    "@commitlint/config-conventional": "8.1.0",
-    "@commitlint/prompt-cli": "8.1.0",
-    "@weahead/eslint-config-tool": "0.1.1",
-    "@weahead/husky-config": "0.3.2",
-    "@weahead/lint-staged-config": "0.2.1",
-    "@weahead/prettier-config": "0.1.3",
-    "eslint": "6.1.0",
-    "eslint-plugin-json": "1.4.0",
-    "husky": "3.0.1",
-    "lint-staged": "9.2.1",
-    "package-change-checker": "1.2.4",
-    "prettier": "1.18.2"
+    "@weahead/tooling": "0.1.0"
   },
   "peerDependencies": {
     "@commitlint/cli": ">=8",
