--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "commitlint": "echo $MSG | commitlint",
     "commit": "commit",
     "lint": "eslint --fix '**/*.js' '**/*.json'",
-    "postinstall": "./scripts/postinstall.sh"
+    "postinstall": "node scripts/postinstall.js"
   },
   "files": [
     "index.js",
